<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.memflow.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_vocabulary"
        android:name="com.example.memflow.ui.vocabulary.VocabularyFragment"
        android:label="@string/title_vocabulary"
        tools:layout="@layout/fragment_vocabulary" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.memflow.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />
</navigation>