<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="279dp" />

    <Button
        android:id="@+id/button_add_to_vocabulary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="9dp"
        android:text="@string/text_add_to_vocabulary_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/word_entry_word_field"
        android:layout_width="242dp"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/word_entry_word"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/word_entry_translation_field"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/word_entry_form_header"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/word_entry_translation_field"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="65dp"
        android:hint="@string/word_entry_translation"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_add_to_vocabulary"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/word_entry_word_field"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>